Resolving code smell